--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,8 @@
 <RCC>
   <qresource prefix="icons">
+    <file>icons/skip-next-outline-svgrepo-com.svg</file>
+    <file>icons/play.svg</file>
+    <file>icons/next.svg</file>
     <file>icons/activity.svg</file>
     <file>icons/archive.svg</file>
     <file>icons/book-open.svg</file>
@@ -20,5 +23,6 @@
     <file>logo.png</file>
     <file>Assets/gaming.JPG</file>
     <file>Assets/paint.jpg</file>
+    <file>Assets/frog.png</file>
   </qresource>
 </RCC>
